--- a/css/style.css
+++ b/css/style.css
@@ -370,6 +370,19 @@ footer img{
         font-size: 40px;
     }
 }
+@media screen and (max-width:1100px){
+    .galeria{
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 230px;
+    }
+    .grid-item{
+        grid-column: span 1;
+        grid-row: span 1;
+    }
+    .libros{
+        grid-row: span 2;
+    }
+}
 @media screen and (max-width:1090px){
     .trabajos img{
         display: none;
@@ -464,6 +477,12 @@ footer img{
     .hero{
         height: 300px;
     } 
+}
+@media screen and (max-width:670px){
+    .galeria{
+        grid-template-columns: repeat(1, 1fr);
+        grid-auto-rows: 200px;
+    }
 }
 
 @media screen and (max-width:650px){
