--- a/css/style.css
+++ b/css/style.css
@@ -331,7 +331,7 @@ footer img{
     position: relative;
 }
 
-.grid-item h3{
+.grid-item h5{
     position: absolute;
     bottom: 0;
     margin-bottom: 0;
@@ -339,8 +339,9 @@ footer img{
     color:black;
     background-color: rgba(255, 0, 0, 0.144);
     font-size: 40px;
+    font-family: 'Times New Roman', Times, serif;
 }
-.grid-item h3:hover{
+.grid-item h5:hover{
     color: white;
     background-color: red;
 }
@@ -357,6 +358,147 @@ footer img{
 .productos p{
     text-align: center;
 }
+
+
+/*!PAGINA SERVICIOS*/
+
+.pag-servicios-1 h3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 4px solid black; 
+    padding: 10px;
+    font-family: "Italiana", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size:40px;
+    color: white;
+}
+.pag-servicios-1 p{
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align:justify;
+    margin-top: 30px;
+    margin-left: 100px;
+    margin-right: 100px;
+    font-size: 25px;
+}
+.pag-servicios-2 div img{
+    width: 300px;
+    height: 250px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+.pag-servicios-2 div{
+    border:2px gray solid ;
+    border-radius: 10px; /*redondeo de puntas*/
+    width:303px ; /*ancho*/
+    height:435px ; /*alto*/
+    text-align: center;
+    margin:20px ;    
+    box-shadow: 0px 10px 23px 24px rgba(0,0,0,0.1); /*sombreado*/
+    background-color: white;
+}
+.pag-servicios-2{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+.pag-servicios-2 div h4{
+    font-family: "Marko One", serif;
+    font-size: 25px;
+    margin-top:auto;
+    color: pink;
+}
+.pag-servicios-2 div p{
+    padding: 15px;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+/*!PAGINA NOSOTRAS*/
+ h3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 4px solid black; 
+    padding: 10px;
+    font-family: "Italiana", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size:45px;
+    color: white;
+}
+.pag-nosotras-1 .nosotras{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    padding: 10px;
+    font-weight: 350;
+    font-style: normal;
+    font-size:30px;
+    color: black;
+}
+.pag-nosotras-1{
+    width: 50%;
+}
+.pag-nosotras{
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    margin: 30px;
+}
+.pag-nosotras-1 p{
+    font-size: 20px;
+    margin-right: 30px;
+    font-family: 'Times New Roman', Times, serif;
+    text-align:center;
+}
+.nosotras-datos{
+    margin-left: 50px;
+}
+span{
+    color:crimson ;
+    font-size: 27px;
+
+}
+
+/*!PAGINA HORÓSCOPO*/
+.horoscopo-1{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 25px;
+    flex-wrap: wrap;
+}
+.horoscopo-2{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 25px;
+    flex-wrap: wrap;
+}
+.horoscopo-3{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 40px; 
+    flex-wrap: wrap;   
+}
+
+.card-link{
+    color: crimson;
+    text-decoration: none;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 25px;
+    transition: 1s;
+}
+
+
 
 /*!-----------MEDIA QUERIES--------*/
 
