--- a/scss/base/_media-queries.scss
+++ b/scss/base/_media-queries.scss
@@ -1,3 +1,8 @@
+@media screen and(max-width:1200px){
+   .nosotras-generales iframe{
+    display: none;
+   }
+}
 @media screen and (max-width:1147px){
     .trabajos{
         flex-direction: column;
@@ -46,6 +51,36 @@
         display: none;
     }
 }
+@media screen and (max-width:1046px){
+    .nosotras-generales .pag-nosotras .pag-nosotras-1 .nosotras{
+        font-weight:200 ;
+        font-size: 22px;
+    }
+    .nosotras-generales .pag-nosotras .pag-nosotras-1 p{
+        font-size: 18px;
+        
+    }
+    .nosotras-generales .pag-nosotras .pag-nosotras-1 p span{
+        font-size:18px ;
+    }
+    .nosotras-generales .pag-nosotras .pag-nosotras-1{
+        padding-top: 50px;
+        width: 80%;
+    }
+    .nosotras-generales .pag-nosotras .nosotras-datos{
+        margin-left: 100px;
+
+    }
+    .nosotras-generales .pag-nosotras .nosotras-datos form div label{
+        font-size: 15px;
+    }
+    main .elegirme div p{
+        margin: 10px;
+    }
+    main .elegirme div{
+        width: 100%;
+    }
+}
 
 @media screen and (max-width:920px){
     .trabajos div p{
@@ -64,34 +99,66 @@
         font-weight: 200;
         font-size:25px;
     }
-    .servicios h2{
+    main .servicios h2{
     padding:5px ;
     font-weight: 200;
-    font-size:25px;
+    font-size:30px;
     }
-    .servicios .servicios-contenedor div{
-        width:303px ; /*ancho*/
-        height:370px ; /*alto*/
-    }
-    .servicios div img{
+    
+   main .servicios .servicios-contenedor div img{
     width: 200px;
     height: 150px;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
-}
+    }
 
-    .servicios .servicios-contenedor div{
+    main .servicios .servicios-contenedor div{
     width:203px ;
     height:270px ;
-}
-    h3{
+    }
+     main .servicios .servicios-contenedor div h3{
     color:deeppink;
     font-size: 20px;
     margin: 10px 15px 20px 15px;
     font-family: "Marko One", serif;
     font-weight: 200;
     font-style: normal;
+    }
 }
+@media screen and (max-width:890px){
+    main .pag-servicios-1 p{
+        font-size: 20px;
+    }
+}
+@media screen and (max-width:887px){
+    main .productos h3{
+        font-weight: 350;
+        font-size:40px;
+    }
+    main .productos h3 p{
+        font-size: 23px;
+    }
+}
+@media screen and (max-width:850px){
+    main .pag-servicios-2 div{
+        width:253px ; /*ancho*/
+        height:300px ;
+    }
+    main .pag-servicios-2 div img{
+        width: 250px;
+        height: 150px;
+    }
+    main .pag-servicios-2 div h4{
+        font-size: 20px;
+    }
+    main .pag-servicios-2 div p{
+        font-size: 16px;
+    }
+}
+@media screen and (max-width:800px){
+    main .productos h3{
+        font-size: 30px;
+    }
 }
 @media screen and (max-width:700px){
     .hero h2{
@@ -103,11 +170,32 @@
     .hero a{
         padding: 10px;
     }
-
+    .nosotras-generales .pag-nosotras{
+        flex-wrap: wrap;
+    }
+    .nosotras-generales .pag-nosotras .nosotras-datos{
+        padding-top: 30px;
+        
+        
+    }
+    .nosotras-generales .pag-nosotras .pag-nosotras-1 .nosotras{
+        font-size: 30px;
+    }
+    .nosotras-generales .pag-nosotras .pag-nosotras-1{
+        margin-bottom: 50px;
+    }
 }
 @media screen and (max-width:690px){
     .parrafo::first-letter{
         color: darksalmon;
+    }
+    main .pag-servicios-1 p{
+        font-size: 15px;
+    }
+    main .pag-servicios-1 h3{
+        border: 2px solid nth($colores, 2);
+        font-weight: 200;
+        font-size:30px;
     }
 }
 
@@ -132,6 +220,19 @@
         text-align: start;
         margin-left:1px;
      }
+}
+@media screen and (max-width:630px){
+    main .productos h3{
+        font-size: 25px;
+    }
+    main .productos p{
+        font-size: 18px;
+        margin: 15px;
+        margin-top: 15px;
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+
 }
 @media screen and (max-width:550px){
     .elegirme p{
@@ -207,15 +308,40 @@
     }
     
 }
-@media screen and (max-width:400px){
-    .elegirme p{
-        font-size: 15px;
+@media screen and(max-width:460px){
+    main .pag-servicios-1 p{
+        font-size: 12px;
     }
-
+}
+@media screen and (max-width:445px){
+    main .productos h3{
+        border: solid 2px nth($colores,2) ;
+        font-size: 18px;
+    }
+    main .productos p{
+        margin: 10px;
+        margin-top: 10px;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+}
+@media screen and (max-width:420px){
+    main .productos p{
+        font-size: 15px;
+        margin: 10px;
+        margin-top: 10px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
 }
 @media screen and (max-width:410px){
     .elegirme p{
         font-size: 8px;
+    }
+}
+@media screen and (max-width:400px){
+    .elegirme p{
+        font-size: 15px;
     }
 }
 
