--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -138,10 +138,14 @@ main {
         color: nth($colores, 1);   
     }
     .pag-nosotras{
-        @include flex(flex, space-around, start);
-        margin: 30px;
+        margin: 30px;   
+        .formulario{
+            margin-top: 50px;
+            margin-bottom: 50px;
+            font-family: $tipografia-secundaria;
+        }
         .pag-nosotras-1{
-            width: 50%;
+            width: 100%;
             .nosotras{
                 text-align: center; 
                 padding: 10px;
@@ -167,21 +171,7 @@ main {
             }
         }
     }
-    .nosotras-datos{
-        margin-left: 50px;  
-        form{
-            div{
-                label{
-                    font-family: $tipografia-terciaria;
-                    font-size: 19px;
-                }
-                input{
-                    margin-bottom: 10px;
-                    border-radius: 5px;
-                }
-            }
-        }
-    }
+    
 }
 
 /*!----------MAIN PAGINA SERVICIOS----------*/
@@ -294,7 +284,7 @@ main {
         img{
             width: 100%;
             height: 100%;
-            object-fit: fill;
+            object-fit:fill;
             box-shadow: 0px 10px 34px 78px rgba(0,0,0,0.1);
         }
         h5{
